--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -1,11 +1,11 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the fglrx-driver package.
+# This file is distributed under the same license as the nvidia-driver package.
 #
 # Yuri Kozlov <yuray@komyakino.ru>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: fglrx-driver 1:12-6+point-2\n"
-"Report-Msgid-Bugs-To: fglrx-driver@packages.debian.org\n"
+"Project-Id-Version: nvidia-driver 1:12-6+point-2\n"
+"Report-Msgid-Bugs-To: nvidia-driver@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-12 14:32+0200\n"
 "PO-Revision-Date: 2012-09-21 19:28+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
@@ -21,22 +21,22 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
-msgid "Install Fglrx driver despite unsupported graphics card?"
+msgid "Install NVIDIA driver despite unsupported graphics card?"
 msgstr ""
-"Установить драйвер Fglrx несмотря на то, что графическая карта им не "
+"Установить драйвер NVIDIA несмотря на то, что графическая карта им не "
 "поддерживается?"
 
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the Fglrx "
-"driver (package fglrx-driver). You may wish to keep the package installed - "
+"This system has a graphics card which is no longer handled by the NVIDIA "
+"driver (package nvidia-driver). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "В системе обнаружена графическая карта, которая больше не поддерживается "
-"драйвером Fglrx (пакет fglrx-driver). Вы можете оставить пакет установленным "
+"драйвером NVIDIA (пакет nvidia-driver). Вы можете оставить пакет установленным "
 "(например, для какой-то другой карты), но карта со следующим набором "
 "микросхем работать не будет:"
 
@@ -44,23 +44,23 @@ msgstr ""
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy Fglrx driver (package "
-"fglrx-legacy-driver) or the free Radeon driver (package xserver-xorg-video-"
-"radeon)."
+"The above card requires either the non-free legacy NVIDIA driver (package "
+"nvidia-legacy-304xx-driver) or the free Nouveau driver (package xserver-xorg-video-"
+"nouveau)."
 msgstr ""
-"Для указанной ранее карты требуется несвободный устаревший драйвер Fglrx "
-"(пакет fglrx-legacy-driver) или свободный драйвер Radeon (пакет xserver-xorg-"
-"video-radeon)."
+"Для указанной ранее карты требуется несвободный устаревший драйвер NVIDIA "
+"(пакет nvidia-legacy-304xx-driver) или свободный драйвер Nouveau (пакет xserver-xorg-"
+"video-nouveau)."
 
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"Before the Radeon driver can be used you must remove Fglrx configuration "
+"Before the Nouveau driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Перед тем, как использовать драйвер Radeon, вам нужно удалить настройку "
-"Fglrx из xorg.conf (и xorg.conf.d/)."
+"Перед тем, как использовать драйвер Nouveau, вам нужно удалить настройку "
+"NVIDIA из xorg.conf (и xorg.conf.d/)."
 
 #. Type: note
 #. Description
@@ -89,7 +89,7 @@ msgstr "Обычно достаточно выполнения команды «
 #. Type: note
 #. Description
 #: ../fglrx-driver.templates:3001
-msgid "Fglrx driver is still enabled in xorg.conf"
+msgid "NVIDIA driver is still enabled in xorg.conf"
 msgstr "Драйвер fglrx всё ещё включён в xorg.conf"
 
 #. Type: note
@@ -105,5 +105,5 @@ msgstr ""
 "файлах настройки:"
 
 #~ msgid ""
-#~ "The fglrx-legacy-driver package will be provided in wheezy-backports."
-#~ msgstr "Пакет fglrx-legacy-driver будет доступен из wheezy-backports."
+#~ "The nvidia-legacy-304xx-driver package will be provided in wheezy-backports."
+#~ msgstr "Пакет nvidia-legacy-304xx-driver будет доступен из wheezy-backports."
