--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -1,12 +1,12 @@
-# Danish translation fglrx-driver.
-# Copyright (C) 2012 fglrx-driver & nedenstående oversættere.
-# This file is distributed under the same license as the fglrx-driver package.
+# Danish translation nvidia-driver.
+# Copyright (C) 2012 nvidia-driver & nedenstående oversættere.
+# This file is distributed under the same license as the nvidia-driver package.
 # Joe Hansen <joedalton2@yahoo.dk>, 2010, 2012.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: fglrx-driver\n"
-"Report-Msgid-Bugs-To: fglrx-driver@packages.debian.org\n"
+"Project-Id-Version: nvidia-driver\n"
+"Report-Msgid-Bugs-To: nvidia-driver@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-12 14:32+0200\n"
 "PO-Revision-Date: 2012-09-30 17:30+01:00\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
@@ -19,20 +19,20 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
-msgid "Install Fglrx driver despite unsupported graphics card?"
-msgstr "Installer Fglrx-driver på trods af at grafikkort ikke er understøttet?"
+msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgstr "Installer NVIDIA-driver på trods af at grafikkort ikke er understøttet?"
 
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the Fglrx "
-"driver (package fglrx-driver). You may wish to keep the package installed - "
+"This system has a graphics card which is no longer handled by the NVIDIA "
+"driver (package nvidia-driver). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
-"De følgende grafikchipsæt i dit system er ikke længere understøttet af Fglrx-"
-"driveren (pakke fglrx-driver). Du kan beholde pakken installeret for "
+"De følgende grafikchipsæt i dit system er ikke længere understøttet af NVIDIA-"
+"driveren (pakke nvidia-driver). Du kan beholde pakken installeret for "
 "eksempel for et andet grafikkort - men grafikkort med det følgende chipsæt "
 "vil ikke kunne bruges."
 
@@ -40,29 +40,29 @@ msgstr ""
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy Fglrx driver (package "
-"fglrx-legacy-driver) or the free Radeon driver (package xserver-xorg-video-"
-"radeon)."
+"The above card requires either the non-free legacy NVIDIA driver (package "
+"nvidia-legacy-304xx-driver) or the free Nouveau driver (package xserver-xorg-video-"
+"nouveau)."
 msgstr ""
-"Det ovenstående kort kræver enten den ikkefrie forældede Fglrx-driver (pakke "
-"fglrx-legacy-driver) eller den frie Radeondriver (pakken xserver-xorg-video-"
-"radeon)."
+"Det ovenstående kort kræver enten den ikkefrie forældede NVIDIA-driver (pakke "
+"nvidia-legacy-304xx-driver) eller den frie Nouveaudriver (pakken xserver-xorg-video-"
+"nouveau)."
 
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"Before the Radeon driver can be used you must remove Fglrx configuration "
+"Before the Nouveau driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Før Radeondriveren kan bruges, skal du fjerne Fglrx-konfigurationen fra xorg."
+"Før Nouveaudriveren kan bruges, skal du fjerne NVIDIA-konfigurationen fra xorg."
 "conf (og xorg.conf.d/)."
 
 #. Type: note
 #. Description
 #: ../fglrx-driver.templates:1001
 msgid "Manual configuration required to enable fglrx driver"
-msgstr "Manuel konfiguration krævet for at aktivere fglrx-driver"
+msgstr "Manuel konfiguration krævet for at aktivere nvidia-driver"
 
 #. Type: note
 #. Description
@@ -71,7 +71,7 @@ msgid ""
 "The fglrx driver is not yet configured. Please consider using /usr/bin/"
 "aticonfig to create a working xorg.conf configuration."
 msgstr ""
-"Fglrx-driveren er endnu ikke konfigureret. Overvej /usr/bin/aticonfig for at "
+"NVIDIA-driveren er endnu ikke konfigureret. Overvej /usr/bin/aticonfig for at "
 "oprette en fungerende xorg.conf-konfiguration."
 
 #. Type: note
@@ -86,8 +86,8 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../fglrx-driver.templates:3001
-msgid "Fglrx driver is still enabled in xorg.conf"
-msgstr "Fglrx-driver er stadig aktiveret i xorg.conf"
+msgid "NVIDIA driver is still enabled in xorg.conf"
+msgstr "NVIDIA-driver er stadig aktiveret i xorg.conf"
 
 #. Type: note
 #. Description
@@ -97,10 +97,10 @@ msgid ""
 "configuration. X cannot be (re-)started successfully until fglrx is disabled "
 "in the following config file(s):"
 msgstr ""
-"Fglrx-driveren er netop fjernet, men den er stadig aktiveret i Xorg-"
+"NVIDIA-driveren er netop fjernet, men den er stadig aktiveret i Xorg-"
 "konfigurationen. X kan ikke (gen-)startes korrekt, før at fglrx er "
 "deaktiveret i de følgende konfigurationsfiler:"
 
 #~ msgid ""
-#~ "The fglrx-legacy-driver package will be provided in wheezy-backports."
-#~ msgstr "Pakken fglrx-legacy-driver vil blive tilbudt i wheezy-backports."
+#~ "The nvidia-legacy-304xx-driver package will be provided in wheezy-backports."
+#~ msgstr "Pakken nvidia-legacy-304xx-driver vil blive tilbudt i wheezy-backports."
