--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -1,12 +1,12 @@
-# Translation of fglrx-driver debconf templates to Polish.
+# Translation of nvidia-driver debconf templates to Polish.
 # Copyright (C) 2012
-# This file is distributed under the same license as the fglrx-driver package.
+# This file is distributed under the same license as the nvidia-driver package.
 #
 # Michał Kułach <michal.kulach@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: fglrx-driver\n"
-"Report-Msgid-Bugs-To: fglrx-driver@packages.debian.org\n"
+"Project-Id-Version: nvidia-driver\n"
+"Report-Msgid-Bugs-To: nvidia-driver@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-12 14:32+0200\n"
 "PO-Revision-Date: 2012-09-21 00:44+0200\n"
 "Last-Translator: Michał Kułach <michal.kulach@gmail.com>\n"
@@ -22,20 +22,20 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
-msgid "Install Fglrx driver despite unsupported graphics card?"
-msgstr "Zainstalować sterownik Fglrx ignorując nieobsługiwaną kartę graficzną?"
+msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgstr "Zainstalować sterownik NVIDIA ignorując nieobsługiwaną kartę graficzną?"
 
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the Fglrx "
-"driver (package fglrx-driver). You may wish to keep the package installed - "
+"This system has a graphics card which is no longer handled by the NVIDIA "
+"driver (package nvidia-driver). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "W systemie znajduje się karta graficzna, która nie jest dłużej obsługiwana "
-"przez sterownik Fglrx (z pakietu fglrx-driver). Można jednak zachować pakiet "
+"przez sterownik NVIDIA (z pakietu nvidia-driver). Można jednak zachować pakiet "
 "(np. do innej karty), lecz ta z następującym chipsetem nie będzie wówczas "
 "obsługiwana:"
 
@@ -43,22 +43,22 @@ msgstr ""
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy Fglrx driver (package "
-"fglrx-legacy-driver) or the free Radeon driver (package xserver-xorg-video-"
-"radeon)."
+"The above card requires either the non-free legacy NVIDIA driver (package "
+"nvidia-legacy-304xx-driver) or the free Nouveau driver (package xserver-xorg-video-"
+"nouveau)."
 msgstr ""
-"Powyższa karta wymaga albo niewolnego, nierozwijanego sterownika Fglrx "
-"(pakiet fglrx-legacy-driver), albo wolnego sterownika Radeon (znajdującego "
-"się w pakiecie xserver-xorg-video-radeon)."
+"Powyższa karta wymaga albo niewolnego, nierozwijanego sterownika NVIDIA "
+"(pakiet nvidia-legacy-304xx-driver), albo wolnego sterownika Nouveau (znajdującego "
+"się w pakiecie xserver-xorg-video-nouveau)."
 
 #. Type: boolean
 #. Description
 #: ../libfglrx.templates:2001
 msgid ""
-"Before the Radeon driver can be used you must remove Fglrx configuration "
+"Before the Nouveau driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Przed użyciem sterownika Radeon, konieczne jest usunięcie konfiguracji Fglrx "
+"Przed użyciem sterownika Nouveau, konieczne jest usunięcie konfiguracji NVIDIA "
 "z xorg.conf (i xorg.conf.d/)."
 
 #. Type: note
@@ -90,7 +90,7 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../fglrx-driver.templates:3001
-msgid "Fglrx driver is still enabled in xorg.conf"
+msgid "NVIDIA driver is still enabled in xorg.conf"
 msgstr "Sterownik fglrx jest wciąż włączony w xorg.conf"
 
 #. Type: note
@@ -106,7 +106,7 @@ msgstr ""
 "wyłączony w następujących plikach konfiguracyjnych:"
 
 #~ msgid ""
-#~ "The fglrx-legacy-driver package will be provided in wheezy-backports."
+#~ "The nvidia-legacy-304xx-driver package will be provided in wheezy-backports."
 #~ msgstr ""
-#~ "Pakiet fglrx-legacy-driver zostanie udostępniony w repozytorium wheezy-"
+#~ "Pakiet nvidia-legacy-304xx-driver zostanie udostępniony w repozytorium wheezy-"
 #~ "backports."
